--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ h2 {
 }
 
 .hero {
-    background: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/537/original/self.jpeg?1678285176") no-repeat center center fixed;
+    background: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/537/original/self.jpeg?1678285176") no-repeat center center;
     height: 1000px;
     background-size: cover;
     text-align: center;
