--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@ body {
     justify-content: space-around;
     flex-wrap: wrap;
     row-gap: 20px;
+    margin-bottom: 100px;
 }
 
 .flower-img {
@@ -31,6 +32,18 @@ body {
     filter: grayscale(0%);
 }
 
+
 footer {
-    height: 100px;
+   position: fixed;
+   left:0;
+   bottom: 0;
+   width: 100%;
+   background-color: #212529;
+   height: 60px;
+   }
+
+.header {
+    margin-top: 50px;
 }
+
+
